--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/SpringDemoDb
 spring.datasource.username=root
-spring.datasource.password=paragrajkale@123
+spring.datasource.password=password
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
